--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,7 @@ body {
   margin-right: auto;
   align-items: center;
   margin-top: 50px;
+  /* height: 100vh; */
 }
 .form{
   border: 1px solid rgba(255, 255, 255, 0.126);
