--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -24,10 +24,24 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 40px;
+    padding: 35px 40px;
     background: rgba(0, 0, 0, 0.9);
-    position: relative;
+    position: fixed;
     z-index: 1000;
+    width: 100%;
+}
+
+.navbar.transparent {
+  background-color: transparent;
+  box-shadow: none;
+}
+
+.navbar.scrolled {
+  background-color: rgba(27, 27, 27, 0.708);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.018);
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px); /* Safari support */
+  color: black;
 }
 
 .navbar-left {
@@ -115,13 +129,14 @@
 
 .hero-section {
     text-align: center;
-    margin: 100px 20px 60px;
+    margin: 0px 20px 60px;
     padding-top: 40px;
 }
 
 .hero-section h1 {
     font-size: 56px;
     margin-bottom: 25px;
+    margin-top: 40px;
     text-shadow: 0 2px 10px rgba(0,0,0,0.5);
     letter-spacing: -0.5px;
     line-height: 1.1;
