--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+html, body {
+  height: auto !important;
+  overflow-y: auto !important;
+}
+
 .body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
